testing/Travis/testcases/prototype/shouldFail/try6.adl
CONTEXT Try6 IN ENGLISH

PATTERN Try6
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RELATION u[E*Y]
CLASSIFY B IS F /\ B
CLASSIFY B IS B /\ G
CLASSIFY F ISA D
CLASSIFY G ISA D
CLASSIFY E ISA F
CLASSIFY A ISA G
-- CLASSIFY B ISA G
-- CLASSIFY B ISA F
-- CLASSIFY F IS B /\ F
-- CLASSIFY G IS B /\ G
RULE Try6 : r = s!(t\/u)
ENDPATTERN

ENDCONTEXT

{-
try6.adl:18:18 error:
  Cannot match the signatures on the left and right of the relative addition.
    The target of s, which is A, should match with the source of (t\/u), which is F.
  
  Type analysis:
  [X*Y] s[X*A]!(t[B*Y]\/u[E*Y])
  [X*A]     ├── s[X*A]
  [F*Y]     └── (t[B*Y]\/u[E*Y])
  [F*Y]         └── t[B*Y]\/u[E*Y]
  [B*Y]             ├── t[B*Y]
  [E*Y]             └── u[E*Y]
-}